link til start av siden i P3

--- a/documents/p3_changes.html
+++ b/documents/p3_changes.html
@@ -27,6 +27,7 @@
 
       <div class="inner-container">
         <main>
+		<a href=" https://build-a-pc.github.io">Link to start of page: https://build-a-pc.github.io</a>
           <section id="list-of-changes">
             <header>
               <h1><a href="#list-of-changes">List of changes</a></h1>
