Fixed errors and compressed scripts.

--- a/documents/p4_testing.html
+++ b/documents/p4_testing.html
@@ -118,7 +118,7 @@
 
           <section id="feedback">
             <header>
-              <h1><a href="#feedback">Feedback Summary</a></h1>
+              <h1><a href="#feedback">Feedback Summary and Responses</a></h1>
             </header>
 
             <p>This is the summary of feedback we got from 13 testers. Our response is written below each question.</p>
