--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
     <title>Build-a-PC</title>
 
     <!-- Scripts -->
-    <script src="scripts/ajax.js" defer></script>
-    <script src="scripts/breadcrumbs.js" defer></script>
-    <script src="scripts/search.js" defer></script>
-    <script src="scripts/navbar.js" defer></script>
-    <script src="scripts/quiz.js" defer></script>
+    <script src="scripts/script.min.js" defer></script>
 
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" href="style/normalize.css" />
